[package]
name = "sge_physics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_math.workspace = true
crossbeam-channel.workspace = true
nalgebra.workspace = true
rapier2d.workspace = true
sge_api.workspace = true
sge_color.workspace = true
sge_input.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
sge_time.workspace = true
sge_utils.workspace = true
slotmap.workspace = true
