[package]
name = "sge_physics"
version = "1.0.2"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Rapier2D wrapper for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
crossbeam-channel.workspace = true
nalgebra.workspace = true
rapier2d.workspace = true
sge_api.workspace = true
sge_color.workspace = true
sge_input.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
sge_rendering.workspace = true
sge_time.workspace = true
sge_utils.workspace = true
slotmap.workspace = true
