[package]
name = "sge_programs"
version = "1.0.3"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Shader functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
glium.workspace = true
log.workspace = true
sge_error_union.workspace = true
sge_macros.workspace = true
sge_window.workspace = true
