[package]
name = "sge_rendering"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_math.workspace = true
error_union.workspace = true
glium.workspace = true
global.workspace = true
log.workspace = true
obj-rs.workspace = true
sge_camera.workspace = true
sge_color.workspace = true
sge_config.workspace = true
sge_debugging.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
sge_programs.workspace = true
sge_rng.workspace = true
sge_shapes.workspace = true
sge_textures.workspace = true
sge_time.workspace = true
sge_types.workspace = true
sge_window.workspace = true
