[package]
name = "sge_rendering"
version = "1.0.3"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Rendering functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[features]
round_coords = []

[dependencies]
sge_vectors.workspace = true
sge_error_union.workspace = true
glium.workspace = true
sge_global.workspace = true
log.workspace = true
obj-rs.workspace = true
sge_camera.workspace = true
sge_color.workspace = true
sge_config.workspace = true
sge_debugging.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
sge_programs.workspace = true
sge_rng.workspace = true
sge_shapes.workspace = true
sge_textures.workspace = true
sge_time.workspace = true
sge_types.workspace = true
sge_window.workspace = true
